--- a/default.css
+++ b/default.css
@@ -1,6 +1,10 @@
 body {
     background-color: whitesmoke;
 }
+ 
+main {
+    color:rgb(0, 0, 0);
+}
 
 nav {
     background-color: red;
@@ -23,4 +27,14 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
+
+li a:hover {
+    background-color: crimson;
+}
+
+.logo {
+    display: block;
+    width: 100px;
+    margin: 20px;
 }
