--- a/default.css
+++ b/default.css
@@ -26,7 +26,7 @@ li a {
     color: whitesmoke;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
+    font-family: "Lucida Console", "Counter New", monospace;
 }
 
 li a:hover {
